test_scripts/errors/trailing_eq_eof.stderr
Parse Error:
 1 | let x =
           ^
Error: Unexpected `EOF` in parse_primary
Failed to parse script
